[project]
name = "mcp-quickstart-python"
version = "0.1.0"
authors = [{name = "Jessica Rodriguez", email = "jrodri@redhat.com"}]
description = "MCP server for status.redhat.com"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "markdownify>=1.1.0",
    "mcp[cli]>=1.12.0",
]
